added page transitions

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,16 @@
     <title>Jake Smiley | Web Developer</title>
   </head>
   <body>
+    <form
+    name="contact-form"
+    netlify
+    hidden
+  >
+    <input type="text" name="name"></input>
+    <input type="email"></input>
+    <textarea name="message"></textarea>
+   
+  </form>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
