netlify forms mark42

--- a/public/index.html
+++ b/public/index.html
@@ -27,9 +27,10 @@
     name="contact-form"
     netlify
     hidden
+    
   >
     <input type="text" name="name"></input>
-    <input type="email"></input>
+    <input type="email" name="email"></input>
     <textarea name="message"></textarea>
    
   </form>
