--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,9 @@
   </head>
   <body>
     <form
-    name="contact-form"
+    name="smiley-contact"
     netlify
     hidden
-    
   >
     <input type="text" name="name"></input>
     <input type="email" name="email"></input>
