--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     name="smiley-contact"
     netlify
     hidden
+    action="/#/about"
   >
     <input type="text" name="name"></input>
     <input type="email" name="email"></input>
