netlify custom success page test 2

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     name="smiley-contact"
     netlify
     hidden
-    action="/#/about"
+    action="/about"
   >
     <input type="text" name="name"></input>
     <input type="email" name="email"></input>
